--- a/config-map.yml
+++ b/config-map.yml
@@ -2,7 +2,19 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: kube-config
+  labels:
+    spring.cloud.kubernetes.config: "true"
 data:
-  application.properties: |-
-    bean.message=Hello World!
-    another.property=value
+  application.yml: |-
+    bean:
+      message: Hello World!
+    another:
+      property: value
+    management:
+      security:
+        enabled: false
+      endpoints:
+        enabled-by-default: true
+        web:
+          exposure:
+            include: "*"
