--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.5.3</version>
+        <version>2.5.2</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
@@ -71,10 +71,10 @@
                             <enricher>
                                 <config>
                                     <fmp-controller>
-                                        <name>spring-cloud-reload</name>
+                                        <name>kube-config</name>
                                     </fmp-controller>
                                     <fmp-service>
-                                        <name>spring-cloud-reload</name>
+                                        <name>kube-config</name>
                                         <type>NodePort</type>
                                     </fmp-service>
                                 </config>
